move to postgres fix create issue route

--- a/TechSupport/appsettings.json
+++ b/TechSupport/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Sqlite": "Data Source=./techsupport.db"
+    "Sqlite": "Data Source=./techsupport.db",
+    "PostgresLocal": "Server=localhost;Port=5431;Database=tech.support;User Id=postgres;Password=qwe123;"
   },
   "Jwt": {
     "Key": "fe0e1c3f6e9112059bfc9b829eb87b9b2f652838",
